--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/starlight": "^0.34.3",
-    "@astrojs/starlight-tailwind": "^4.0.1",
-    "@tailwindcss/vite": "^4.1.7",
-    "astro": "^5.6.1",
-    "sharp": "^0.32.5",
-    "tailwindcss": "^4.1.7"
-  }
+    "name": "@wthgame/kitnomicon",
+    "private": true,
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/starlight": "^0.34.3",
+        "@astrojs/starlight-tailwind": "^4.0.1",
+        "@tailwindcss/vite": "^4.1.7",
+        "astro": "^5.6.1",
+        "sharp": "^0.32.5",
+        "tailwindcss": "^4.1.7"
+    }
 }
