--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@astrojs/starlight": "^0.34.3",
         "@astrojs/starlight-tailwind": "^4.0.1",
+        "@fontsource/merriweather": "^5.2.7",
         "@tailwindcss/vite": "^4.1.7",
         "astro": "^5.6.1",
         "sharp": "^0.32.5",
